Capstone section copy modified

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Myriam Chevalier</title>
+		<title>Nathan Chevalier</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,9 +16,8 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<h1><strong>I am Myriam Chevalier</strong>, a software developer<br />
-					currently training at Nashville <br />
-					Software School<br />
+					<h1>I am <strong>Nathan Chevalier</strong>.<br />I'm a <strong>software</strong> developer<br />
+					& <strong>UI/UX</strong> designer.<br />
 					</h1>
 				</div>
 			</header>
@@ -30,30 +29,32 @@
 					<section id="one">
 						<header class="major">
 							<h2>About me</h2>
-							<h3>VR Enthusiast | Blues Dancer | Avid Learner</h3>
+							<h3>Karaoke Enthusiast | Factory Game Fanatic | Avid Learner</h3>
 						</header>
-						<div>Montrealer turned Nashvillian, I have always been one to go where the flow took me. I made the decision last year to change that, and make a very intentional return to school to change careers. After being a student at Nashville Software School, I feel ready to tackle new challenges and find a position where I can keep growing as a developer.</div>
+						<div>As a game industry veteran and full-stack software developer, I bring a wide range of tools to any team I join. From concept to design to engineering and finally to implementation, I embody the concept of “full- stack”. I love working in a team in both team and leadership roles to solve problems and provide a wide range of creative solutions. I have over a decade of experience creating game content and user experiences for two MMOs and am proficient with a wide range of 3D & 2D design tools. More recently I have attended the full-time NSS web development boot camp to hone my engineering and algorithmic thinking skills.</div>
 						<ul class="actions">
-							<li><a href="images/MyriamChevalierResume.pdf" class="button" target="_blank">Download Resume</a></li>
+							<li><a href="images/NathanChevalierResume.pdf" class="button" target="_blank" style="margin-top: 2em;">Download Resume</a></li>
 						</ul>
 					</section>
 
 				<!-- Two -->
 					<section id="two">
-						<h2>My projects</h2>
+						<h2>My web development projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/BuzzeeBrainSS.png" class="image fit thumb"><img src="images/thumbs/BuzzeeBrain.png" alt="" /></a>
-								<h2>BuzzeeBrain</h2>
+								<h2>There Will Be Food</h2>
 								<h4>Front-End Capstone</h4>
-								<p>BuzzeeBrain is a web app for people who struggle with object permanence and need a little bit of help tracking important items/documents. 
+								<p>There Will Be Food is a food inventory management application with a focus on cohesive design and usability. </p> <br />
 								</p>
-								<p>It is a single page application, built using React, React Router and API fetch calls to JSON server. I syled it with Bootstrap and CSS.<p/>
+								<p>Implemented using React, Virtual JSON Server, & Tailwind to achieve full CRUD functionality.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/SPOON.png" alt="" /></a>
-								<h2>SpoonIt!</h2>
-								<h4>Coming s(p)oon</h4>
+								<h2>Dan Flashes</h2>
+								<h4>Full-Stack Capstone</h4>
+								<p>A custom shirt designer focused on designing shirts with layered patterns. Users can design shirts, share them, and save other designs as favorites. </p>
+								<p>Implemented using React for the front-end, Django for the back-end, and Tailwind for styling.</p>
 							</article>
 						</div>
 					</section>
