--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <h2>About me</h2>
           <h3>Karaoke Enthusiast | Factory Game Fanatic | Avid Learner</h3>
         </header>
+		
         <div>
           As a game industry veteran and full-stack software developer, I bring
           a wide range of tools to any team I join. From concept to design to
@@ -59,15 +60,36 @@
         </ul>
       </section>
 
-      <!-- Two -->
+      <!-- Projects -->
       <section id="two">
-        <h2>My web development projects</h2>
+        <h2>My Web Development Projects</h2>
         <div class="row">
           <article class="col-6 col-12-xsmall work-item">
-            <a href="images/fulls/BuzzeeBrainSS.png" class="image fit thumb"
+            <a href="images/fulls/danFlashesEditor.png" class="image fit thumb" title="Dan Flashes Shirt Creation"
+              ><img src="images/thumbs/FlashesThumb.png" alt="Dan Flashes Shirt Creation"
+            /></a>
+            <h2>Dan Flashes - 2024</h2>
+            <h4>Full-Stack Capstone</h4>
+            <ul>
+              <li>
+                An interactive design tool dedicated to crafting shirts
+                featuring intricate layered patterns.
+              </li>
+              <li>
+                Users can create shirt designs, share their creations, and save
+                designs from other users as favorites.
+              </li>
+              <li>
+                Implemented using React for the front-end, Django for the
+                back-end, and Tailwind for styling.
+              </li>
+            </ul>
+          </article>
+          <article class="col-6 col-12-xsmall work-item">
+            <a href="images/fulls/foodLanding.png" class="image fit thumb" title="There Will Be Food Landing"
               ><img src="images/thumbs/FoodThumb.png" alt=""
             /></a>
-            <h2>There Will Be Food</h2>
+            <h2>There Will Be Food - 2023</h2>
             <h4>Front-End Capstone</h4>
             <ul>
               <li>
@@ -84,25 +106,74 @@
               </li>
             </ul>
           </article>
+        </div>
+      </section>
+
+      <!-- Work -->
+      <section id="three">
+        <h2>My Game Development Experience</h2>
+        <div class="row">
           <article class="col-6 col-12-xsmall work-item">
-            <a href="images/fulls/02.jpg" class="image fit thumb"
-              ><img src="images/thumbs/FlashesThumb.png" alt=""
+            <a href="images/fulls/aoaStore.png" class="image fit thumb" title="Storefront Mockup for Age of Ascent"
+              ><img src="images/thumbs/AoAThumb.png" alt=""
             /></a>
-            <h2>Dan Flashes</h2>
-            <h4>Full-Stack Capstone</h4>
+            <h2>Age of Ascent (2014-2022)</h2>
+            <h3>Illyriad Games Ltd.</h3>
+            <h4>UI/UX Design | Game Design | Creative Direction</h4>
             <ul>
               <li>
-                An interactive design tool dedicated to crafting shirts featuring intricate layered patterns.
+                Age of Ascent is a cancelled Space MMORPG which Began as an
+                HTML5 babylon.js project, and later pivoted to Unity.
               </li>
-			  <li>Users can create shirt designs, share their creations, and save designs from other users as favorites.</li>
               <li>
-                Implemented using React for the front-end, Django for the
-                back-end, and Tailwind for styling.
+                Oversaw the project's creative strategy, user interface design,
+                and the development of all visual assets.
+              </li>
+              <li>
+                Worked closely with a team of developers to translate the game
+                from a 3D environment in the web to the Unity game engine.
+              </li>
+              <li>
+                Created an extensive library of stylized 3D models,
+                illustrations, and UI/UX components.
+              </li>
+            </ul>
+          </article>
+          <article class="col-6 col-12-xsmall work-item">
+            <a href="images/fulls/illyUI4.png" class="image fit thumb" title="Alpha Version of UIv4"
+              ><img src="images/thumbs/IllyriadThumb.png" alt=""
+            /></a>
+            <h2>Illyriad (2012 - 2022)</h2>
+            <h3>Illyriad Games Ltd.</h3>
+            <h4>UI/UX Design | Content Design | Illustration</h4>
+            <ul>
+              <li>
+                Illyriad is an active Free-to-Play MMORPG built with ASP.NET and
+                JavaScript.
+              </li>
+              <li>
+                Designed a fully responsive user interface for the comprehensive
+                full-screen redesign of Illyriad.
+              </li>
+              <li>
+                Designed and created cosmetic virtual goods, boosting overall
+                revenue.
+              </li>
+              <li>
+                Managed the design elements for deploying Illyriad across
+                various platforms, including Steam and the Microsoft Store, and
+                oversaw its ongoing maintenance.
+              </li>
+              <li>
+                Developed a comprehensive collection of stylized graphics
+                assets, illustrations, and UI/UX components.
               </li>
             </ul>
           </article>
         </div>
       </section>
+
+      <!-- Techs -->
       <section class="technologies" id="four">
         <h2>Technologies</h2>
         <div class="tech-container">
@@ -115,6 +186,63 @@
         </div>
         <div class="logo-div">
           <div class="logo">
+            <img class="img" src="images/icons/js.png" alt="JavaScript" />
+            <p class="text-muted">JavaScript</p>
+          </div>
+		  <div class="logo">
+            <img class="img" src="images/icons/react.png" alt="React" />
+            <p class="text-muted">React</p>
+          </div>
+		  <div class="logo">
+            <img class="img" src="images/icons/jsx.png" alt="JSX" />
+            <p class="text-muted">JSX</p>
+          </div>
+		  <div class="logo">
+            <img class="img" src="images/icons/html.png" alt="HTML" />
+            <p class="text-muted">HTML 5</p>
+          </div>
+          <div class="logo">
+            <img class="img" src="images/icons/css.png" alt="CSS" />
+            <p class="text-muted">CSS</p>
+          </div>
+          <div class="logo">
+            <img class="img" src="images/icons/tailwindLogo.png" alt="Tailwind" />
+            <p class="text-muted">Tailwind</p>
+          </div>
+		  <div class="logo">
+            <img class="img" src="images/icons/python.png" alt="Python" />
+            <p class="text-muted">Python</p>
+          </div>
+		  <div class="logo">
+            <img class="img" src="images/icons/django.jpeg" alt="Django" />
+            <p class="text-muted">Django</p>
+          </div>
+		  <div class="logo">
+            <img class="img" src="images/icons/photoshopLogo.png" alt="Photoshop" />
+            <p class="text-muted">Photoshop</p>
+          </div>
+		  <div class="logo">
+            <img class="img" src="images/icons/illustratorLogo.png" alt="Illustrator" />
+            <p class="text-muted">Illustrator</p>
+          </div>
+		  <div class="logo">
+            <img class="img" src="images/icons/figmaLogo.png" alt="Figma" />
+            <p class="text-muted">Figma</p>
+          </div>
+		  <div class="logo">
+            <img class="img" src="images/icons/blenderLogo.png" alt="Blender" />
+            <p class="text-muted">Blender</p>
+          </div>
+		  <div class="logo">
+            <img class="img" src="images/icons/substanceLogo.png" alt="Substance" />
+            <p class="text-muted">Substance</p>
+          </div>
+		  <div class="logo">
+            <img class="img" src="images/icons/unityLogo.png" alt="Unity" />
+            <p class="text-muted">Unity</p>
+          </div>
+
+          <div class="logo">
             <img class="img" src="images/icons/git.png" alt="Git" />
             <p class="text-muted">Git</p>
           </div>
@@ -126,49 +254,11 @@
             <img class="img" src="images/icons/vscode.png" alt="VSCode" />
             <p class="text-muted">VS Code</p>
           </div>
-          <div class="logo">
-            <img class="img" src="images/icons/html.png" alt="HTML" />
-            <p class="text-muted">HTML 5</p>
-          </div>
-          <div class="logo">
-            <img class="img" src="images/icons/css.png" alt="CSS" />
-            <p class="text-muted">CSS</p>
-          </div>
-          <div class="logo">
-            <img class="img" src="images/icons/js.png" alt="JavaScript" />
-            <p class="text-muted">JavaScript</p>
-          </div>
-          <div class="logo">
-            <img class="img" src="images/icons/jquery.png" alt="JQuery" />
-            <p class="text-muted">jQuery</p>
-          </div>
-          <div class="logo">
-            <img class="img" src="images/icons/bootstrap.png" alt="Bootstrap" />
-            <p class="text-muted">Bootstrap</p>
-          </div>
+
+
           <div class="logo">
             <img class="img" src="images/icons/npm.png" alt="NPM" />
             <p class="text-muted">NPM</p>
-          </div>
-          <div class="logo">
-            <img class="img" src="images/icons/react.png" alt="React" />
-            <p class="text-muted">React</p>
-          </div>
-          <div class="logo">
-            <img class="img" src="images/icons/jsx.png" alt="JSX" />
-            <p class="text-muted">JSX</p>
-          </div>
-          <div class="logo">
-            <img
-              class="img"
-              src="images/icons/reactstrap-purple.png"
-              alt="ReactStrap"
-            />
-            <p class="text-muted">ReactStrap</p>
-          </div>
-          <div class="logo">
-            <img class="img" src="images/icons/python.png" alt="Python" />
-            <p class="text-muted">Python</p>
           </div>
           <div class="logo">
             <img class="img" src="images/icons/sqlite.png" alt="SQLite" />
@@ -179,10 +269,10 @@
             <p class="text-muted">SQL</p>
           </div>
           <div class="logo">
-            <img class="img" src="images/icons/django.jpeg" alt="Django" />
-            <p class="text-muted">Django</p>
+            <img class="img" src="images/icons/factorioLogo.png" alt="Factorio" />
+            <p class="text-muted">Factorio</p>
           </div>
-          <div class="hr margin-top"></div>
+
         </div>
       </section>
 
@@ -196,21 +286,21 @@
                 <h3 class="icon solid fa-mobile-alt">
                   <span class="label">Phone</span>
                 </h3>
-                629-215-9833
+                931-538-5264
               </li>
               <li>
                 <h3 class="icon solid fa-envelope">
                   <span class="label">Email</span>
                 </h3>
                 <a href="mailto:myriamochevalier@gmail.com"
-                  >myriamochevalier@gmail.com</a
+                  >cerberusgfx@gmail.com</a
                 >
               </li>
               <li>
                 <h3 class="icon brands fa-github">
                   <span class="label">Github</span>
                 </h3>
-                <a href="https://github.com/myriamchevalier"
+                <a href="https://github.com/Nathan-Chevalier/"
                   >Take a look at my repos on GitHub</a
                 >
               </li>
@@ -218,12 +308,12 @@
                 <h3 class="icon brands fa-linkedin">
                   <span class="label">LinkedIn</span>
                 </h3>
-                <a href="https://www.linkedin.com/in/myriamchevalier/"
+                <a href="https://www.linkedin.com/in/nathan-chevalier/"
                   >Connect with me on LinkedIn!</a
                 >
               </li>
               <li>
-                <a href="images/MyriamChevalierResume.pdf" class="button"
+                <a href="images/NathanChevalierResume.pdf" class="button"
                   >Download Resume</a
                 >
               </li>
@@ -554,10 +644,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
     <footer id="footer">
       <div class="inner">
         <ul class="copyright">
-          <li>&copy; Myriam Chevalier</li>
-          <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+          <li>&copy; Nathan Chevalier</li>
+          <li>Template: <a href="http://html5up.net">HTML5 UP</a></li>
         </ul>
-        <p>Photo by Steven Kostusyk</p>
+
       </div>
     </footer>
 
