--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <h3 class="icon solid fa-envelope">
                   <span class="label">Email</span>
                 </h3>
-                <a href="mailto:myriamochevalier@gmail.com"
+                <a href="mailto:cerberusgfx@gmail.com"
                   >cerberusgfx@gmail.com</a
                 >
               </li>
