--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <meta property="og:title" content="Nathan Chevalier" />
+    <meta property="og:title" content="Nathan Chevalier - Personal Website" />
     <meta
       property="og:description"
       content="I am Nathan Chevalier. I'm a software developer & UI/UX designer."
