--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
       property="og:description"
       content="I am Nathan Chevalier. I'm a software developer & UI/UX designer."
     />
-    <meta property="og:image" content="https://nathan-chevalier.github.io/images/thumbs/linkPreview.png"/>
+    <meta
+      property="og:image"
+      content="https://nathan-chevalier.github.io/images/thumbs/linkPreview.png"
+    />
   </head>
   <body class="is-preload">
     <!-- Header -->
@@ -56,7 +59,7 @@
         <ul class="actions">
           <li>
             <a
-              href="images/NathanChevalierResume.pdf"
+              href="images/UIUXResume.pdf"
               class="button"
               target="_blank"
               style="margin-top: 2em"
@@ -378,7 +381,7 @@
                 >
               </li>
               <li>
-                <a href="images/NathanChevalierResume.pdf" class="button"
+                <a href="images/UIUXResume.pdf" class="button"
                   >Download Resume</a
                 >
               </li>
